--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601}  %-5p %c{1} - %m%n
 
-# log file appender
+# log file appender.
 log4j.appender.victim=org.apache.log4j.RollingFileAppender
 log4j.appender.victim.MaxFileSize=10MB
 log4j.appender.victim.MaxBackupIndex=5
